# loblab

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: feed.csv  record_binance.py
docs/: backtest_explainer.md  idmap_explainer.md  market_maker_explainer.md  matching_explainer.md  signal_explainer.md  spsc_explainer.md
include/lob/: id_map.hpp  naive_book.hpp  order_book.hpp  spsc_ring.hpp  types.hpp
src/: backtest.cpp  bench.cpp  bench_mt.cpp  market_maker.cpp  match_bench.cpp  replay.cpp  signal_bench.cpp
tests/: test_book.cpp  test_match.cpp
